<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="error">error</string>
    <string name="screen_placeholder">88888888888</string>
    <string name="explosion">Explosion</string>
    <string name="equal">=</string>
    <string name="percent">%</string>
    <string name="div">÷</string>
    <string name="mult">x</string>
    <string name="minus">-</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="comma">,</string>

    <string name="trunc_num">%s..</string>
</resources>